--- a/src/main/resources/fxml/application.fxml
+++ b/src/main/resources/fxml/application.fxml
@@ -2,72 +2,63 @@
 
 <?import hu.elte.databasesystems.view.Plot?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import org.controlsfx.control.StatusBar?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.elte.databasesystems.AppController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity"
+            minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.91"
+            fx:controller="hu.elte.databasesystems.AppController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <Menu mnemonicParsing="false" text="File">
-                <MenuItem fx:id="loadMenuItem" mnemonicParsing="false" onAction="#handleLoadButton" text="Load" />
-                <MenuItem fx:id="closeAppItem" mnemonicParsing="false" onAction="#handleCloseButton" text="Close" />
+                <MenuItem fx:id="loadMenuItem" mnemonicParsing="false" onAction="#handleLoadButton" text="Load"/>
+                <MenuItem fx:id="closeAppItem" mnemonicParsing="false" onAction="#handleCloseButton" text="Close"/>
             </Menu>
         </MenuBar>
     </top>
     <bottom>
-        <StatusBar fx:id="statusBar" text="" />
+        <StatusBar fx:id="statusBar" text=""/>
     </bottom>
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
             <padding>
-                <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
             </padding>
             <opaqueInsets>
-                <Insets />
+                <Insets/>
             </opaqueInsets>
-         <VBox>
-            <children>
-               <GridPane hgap="10.0" prefHeight="90.0" prefWidth="259.0" vgap="10.0">
-                 <columnConstraints>
-                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="265.0" minWidth="-Infinity" prefWidth="116.0" />
-                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.0" minWidth="10.0" prefWidth="424.0" />
-                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.0" minWidth="10.0" prefWidth="424.0" />
-                 </columnConstraints>
-                 <rowConstraints>
-                   <RowConstraints />
-                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                 </rowConstraints>
-                  <children>
-                     <Label text="Window width:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                     <Label text="Window length:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                     <Label text="Number of objects:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                     <TextField fx:id="widthText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                     <TextField fx:id="lengthText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                     <TextField fx:id="numObjText" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                     <Button fx:id="startButton" onAction="#handleStartButton" mnemonicParsing="false" GridPane.columnIndex="0" GridPane.rowIndex="4" text="Start" />
-                      
-                  </children>
-                  <padding>
-                     <Insets bottom="20.0" />
-                  </padding>
-               </GridPane>
-            </children>
-         </VBox>
-            <Plot fx:id="plot" />
+            <VBox>
+                <GridPane hgap="10.0" prefHeight="90.0" prefWidth="259.0" vgap="10.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="265.0" minWidth="-Infinity"
+                                           prefWidth="116.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.0" minWidth="10.0" prefWidth="424.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.0" minWidth="10.0" prefWidth="424.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <padding>
+                        <Insets bottom="20.0"/>
+                    </padding>
+                    <Label text="Window width:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+                    <Label text="Window length:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+                    <Label text="Number of objects:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+                    <TextField fx:id="widthText" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                    <TextField fx:id="lengthText" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                    <TextField fx:id="numObjText" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                    <Button fx:id="startButton" onAction="#handleStartButton" mnemonicParsing="false"
+                            GridPane.columnIndex="0" GridPane.rowIndex="4" text="Start"/>
+
+                </GridPane>
+            </VBox>
+            <Plot fx:id="plot"/>
         </VBox>
     </center>
 </BorderPane>
