--- a/src/main/resources/fxml/plot.fxml
+++ b/src/main/resources/fxml/plot.fxml
@@ -4,12 +4,12 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.layout.Pane?>
-
-<fx:root fx:id="pane" prefHeight="0" prefWidth="0" type="Pane" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1">
-    <Canvas fx:id="canvas" height="150" width="150" />
-    <NumberAxis autoRanging="false" side="BOTTOM" fx:id="xAxis" />
-    <NumberAxis fx:id="yAxis" autoRanging="false" side="LEFT" />
-   <opaqueInsets>
-      <Insets />
-   </opaqueInsets>
+<fx:root xmlns:fx="http://javafx.com/fxml/1" fx:id="pane" prefHeight="0" prefWidth="0" type="Pane"
+         xmlns="http://javafx.com/javafx/8.0.91">
+    <Canvas fx:id="canvas" height="150" width="150"/>
+    <NumberAxis autoRanging="false" side="BOTTOM" fx:id="xAxis"/>
+    <NumberAxis fx:id="yAxis" autoRanging="false" side="LEFT"/>
+    <opaqueInsets>
+        <Insets/>
+    </opaqueInsets>
 </fx:root>
